user-bff-service/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-bff-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-bff-service
  template:
    metadata:
      labels:
        app: user-bff-service
        pod-template-hash: $_TAG
    spec:
      containers:
        - name: user-bff-service-container
          image: gcr.io/micro-services-406818/quickmart-user-bff-service:$_TAG
          ports:
            - containerPort: 5001
