user-bff-service/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-bff-service
spec:
  selector:
    app: user-bff-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: LoadBalancer
